feat: add devcontainer

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,11 +1,7 @@
 services:
   web:
     build:
-      context: ../../
-      dockerfile: infra/dev/Dockerfile
-      args:
-        - USER_ID=${USER_ID:?err}
-        - GROUP_ID=${GROUP_ID:?err}
+      dockerfile: Dockerfile
     environment:
       - FLASK_DEBUG=True
       - FLASK_RUN_HOST=0.0.0.0
@@ -13,15 +9,11 @@ services:
       - SQLALCHEMY_DATABASE_URI_TEST=postgresql://${POSTGRES_USER:?err}:${POSTGRES_PASSWORD:?err}@db-test/${POSTGRES_DB_TEST:?err}
       - SQLALCHEMY_TRACK_MODIFICATIONS=False
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:?err}
-    command: >
-      sh -c "
-        poetry run flask --app src db upgrade &&
-        poetry run flask --app src run
-      "
+    command: sleep infinity
     ports:
       - "5000:5000"
     volumes:
-      - ../../:/code/
+      - ../:/workspaces/evolux-challenge/:cached
     depends_on:
       db:
         condition: service_healthy
@@ -46,8 +38,6 @@ services:
       - postgres_data_dev:/var/lib/postgresql/data/
   db-test:
     image: postgres:17.2
-    profiles:
-      - test
     environment:
       - POSTGRES_DB=${POSTGRES_DB_TEST:?err}
       - POSTGRES_USER=${POSTGRES_USER:?err}
@@ -58,7 +48,7 @@ services:
       - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL:?err}
       - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD:?err}
     ports:
-      - "8080:8080"
+      - "8080:80"
     depends_on:
       - db
 
