--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,7 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
+### Dev Container ###
+# Dev Container environment variables file
+!.devcontainer/.env
